--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-nltk
-pandas
-tensorflow==2.11
-scikit-learn
-numpy
-matplotlib
-seaborn
-tabulate
-scipy
-gensim
-wordcloud
-datasets
-gitpython
-transformers
-tf_keras
+tensorflow==2.10.1
+numpy>=1.18.5,<1.26.0
+nltk==3.8.1
+pandas==1.5.3
+scikit-learn==1.1.3
+matplotlib==3.6.2
+seaborn==0.12.1
+tabulate==0.9.0
+scipy==1.9.3
+gensim==4.3.0
+wordcloud==1.8.2.2
+datasets==2.7.1
+gitpython==3.1.29
+transformers==4.25.1
