--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tensorflow==2.10.1
+tensorflow==2.14.0
 numpy>=1.18.5,<1.26.0
 nltk==3.8.1
 pandas==1.5.3
-scikit-learn==1.1.3
+scikit-learn==1.2.2
 matplotlib==3.6.2
 seaborn==0.12.1
 tabulate==0.9.0
@@ -11,4 +11,5 @@ gensim==4.3.0
 wordcloud==1.8.2.2
 datasets==2.7.1
 gitpython==3.1.29
-transformers==4.25.1
+transformers==4.31.0
+joblib==1.3.2
